Fixed horizontal scroll

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -24,7 +24,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 30em;
   z-index: -10;
 }
